# HpAgent

./: .gitignore  README.md  config.yaml.example  docker-compose.yaml  pyproject.toml  requirements.txt  run.ps1
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
config/: agents.yaml  models.yaml  napcat-cleanup.sh
config/dynamicconfig/: development-sql.yaml
config/mcp/: servers.yaml
config/prompts/: environment.yaml  guidance.yaml  identities.yaml  system.yaml  tool_summary.yaml
docs/: code-review-redundancy.md  mistake.md
docs/v10/: resources-module-guide.html  session-module-guide.html  workspace-module-guide.html
docs/v8/: hindsight-memory-best-practices.md
migrations/: 001_accounts.sql
scripts/: clear-all.sh  clear-hindsight.sh  clear-redis.sh  clear-temporal.sh  dev-reset.sh  merge-account.py  migrate-memory-format.py  session-viewer.py  start-all.sh  start-mcp.sh  test-fast-models.py  test-models.py  test-official-qq.py
src/: Dockerfile  __init__.py  entrypoint.sh  main.py  requirements.txt  temporal_worker.py
src/account/: __init__.py  account_service.py  models.py
src/activities/: __init__.py  agent_activities.py
src/agent/: __init__.py  adapters.py  bus.py  compensation.py  composite.py  context.py  factory.py  interfaces.py  llm_agent.py  (+5 more)
src_old/: main.py
test/: test_hindsight.py  test_nsjail.py  test_workspace.py  ws_client.py
tests/: test_agent_runner.py  test_common_types.py  test_context_builder.py  test_llm_executor.py  test_new_arch.py  test_sandbox_new.py  test_session_store.py
(+210 files in other folders)
